[tool.poetry]
name = "vtuber-twitter-tools"
version = "0.1.0"
description = ""
authors = ["新篠ゆう <37145593+yuarasino@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vtuber_twitter_tools"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
